samples/_failures_safe/1761192789_755075_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_507b6090.c: In function ‘main’:
./samples/SAFE/__tmp_507b6090.c:172:43: error: expected ‘)’ at end of input
  172 |     if (fgets(input, sizeof(input), stdin)
      |        ~                                  ^
      |                                           )
./samples/SAFE/__tmp_507b6090.c:172:5: error: expected declaration or statement at end of input
  172 |     if (fgets(input, sizeof(input), stdin)
      |     ^~
